made changes in reducer and actions to get state in component at front-view ...

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -2,16 +2,24 @@
 <html lang="en">
 <head>
 	<title>Cantaloupe</title>
-  <link href="http://redux-form.com/6.0.2/bundle.css"media="screen, projection"rel="stylesheet" type="text/css"/>
-  <link href="../app/assets/font-awesome-4.6.3/css/font-awesome.min.css" media="screen, projection" rel="stylesheet" type="text/css"/>
-  <link href="../app/assets/main.css" media="screen, projection" rel="stylesheet" type="text/css"/>
-  <link href="../app/assets/react-bootstrap-table-all.min.css" media="screen, projection" rel="stylesheet" >
-  <link href="../app/assets/bootstrap-3.3.7-dist/css/bootstrap.min.css" media="screen, projection" rel="stylesheet"/>
+  <link rel="stylesheet" type="text/css" media="screen, projection" href="http://redux-form.com/6.0.2/bundle.css" />
+  <link rel="stylesheet" type="text/css" media="screen, projection" href="../app/assets/font-awesome-4.6.3/css/font-awesome.min.css"   />
+  <link rel="stylesheet" type="text/css" media="screen, projection" href="../app/assets/main.css"   />
+  <link rel="stylesheet" type="text/css" media="screen, projection" href="../app/assets/react-bootstrap-table-all.min.css"   >
+  <link rel="stylesheet" type="text/css" media="screen, projection" href="../app/assets/bootstrap-3.3.7-dist/css/bootstrap.min.css"  />
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" type="text/css" media="screen, projection" href="../app/assets/bootstrap-select-1.11.2/dist/css/bootstrap-select.min.css">
 
 </head>
 <body>
   <div id="app"></div>
+
   <script src="../app/assets/jquery-3.1.0.min.js" ></script>
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="../app/assets/bootstrap-select-1.11.2/dist/js/bootstrap-select.min.js"></script>
+
   <script type="text/javascript" src="bundle.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="../app/assets/bootstrap-3.3.7-dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
