--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Cantaloupe</title>
+	<link rel="icon" href="../../app/assets/img/tabLogo.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" media="screen, projection" href="http://redux-form.com/6.0.2/bundle.css" />
 	<link rel="stylesheet" type="text/css" media="screen, projection" href="../app/assets/font-awesome-4.6.3/css/font-awesome.min.css"   />
 	<link rel="stylesheet" type="text/css" media="screen, projection" href="../app/assets/main.css"   />
