--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -13,10 +13,10 @@
 <body>
 
 	<div id="app"></div>
-
 	<script type="text/javascript" src="bundle.js"></script>
-	<script src="../app/assets/jquery-3.1.0.min.js" ></script>
+	<!-- <script src="../app/assets/jquery-3.1.0.min.js" ></script> -->
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="../app/assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+	<!-- <script src="../app/assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script> -->
+	<!-- <script src="../app/assets/notify.js"></script> -->
 </body>
 </html>
